Почти доделал начальные экраны (авторизация, регистрация, сброс пароля, получение кода, смена пароля), добавил уведомление для пользователя о том, что отсутствует соединение с интернетом

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="min_length_of_password_is_8_symbols">Минимальная длина пароля должна составлять 8 символов</string>
     <string name="min_length_of_password_confirmation_is_8_symbols">Минимальная длина подтверждения пароля должна составлять 8 символов</string>
     <string name="in_system_not_user_with_this_credits">Пользователя с такими данными для входа не существует в системе</string>
+    <string name="in_system_not_user_with_this_email">Пользователя с такой электронной почтой не существует в системе</string>
     <string name="an_unknown_error_occurred_during_the_operation">При выполнении операции произошла неизвестная ошибка</string>
     <string name="user_with_such_an_email_address_is_already_registered_in_the_system">Пользователь с такой электронной почтой уже зарегистрирован в системе</string>
     <string name="name_must_be_at_least_2_characters_long">Имя не может быть меньше 2 символов</string>
@@ -79,4 +80,7 @@
     <string name="password_and_its_confirmation_must_match">Пароль и его подтверждение должны совпадать</string>
     <string name="password_confirmation">Подтверждение пароля</string>
     <string name="change">Сменить</string>
+    <string name="profile">Профиль</string>
+    <string name="there_is_no_internet_connection">Отсутствует интернет-соединение</string>
+    <string name="could_not_set_a_new_password_for_user">Не удалось установить новый пароль для пользователя</string>
 </resources>
